2012-06-14  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* docs/Makefile.in: Regenerated.

	* docs/Makefile.am (gnuplot.ms, figures, gnuplot.tex)
	(gnuplot.hlp, gnuplot.gih, allgih, wxhelp/wgnuplot.html)
	(gnuplot.ipf, gnuplot.rtf, gnuplot.rnh): Targets running private
	executables lacked mandatory $(EXEEXT).  Caused direct build of,
	e.g. 'make pdf', to try and build the wrong program and fail.

2012-06-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c src/graph3d.h src/set.c src/show.c src/save.c
	src/unset.c src/plot3d.c src/gp_types.h src/tables.c src/graphics.c
	docs/gnuplot.doc:

	New command keywords "set surface {implicit|explicit}".
	Until now, splot has always added isolines to generate a gridded surface
	if an input data file looks like it contains lines along one direction
	of the grid.  This behavior corresponds to the "implicit" keyword and
	remains the default.  "set surface explicit" turns off the automatic
	generation of isolines, allowing such a data file to be plotted purely
	as unconnected lines rather than a generated grid.  You can still
	generate a gridded surface in this case by saying
	"plot ... with surface" rather than "plot ... with lines".

	Addresses tracker item #1244775 (Theo Hopman)

2012-06-13  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/config.mgw config/config.nt src/win/wtext.h:  Move preprocessor
	defines for fake pipe support to wtext.h in order to avoid redefinition
	warnings.

	* config/mingw/Makefile config/msvc/Makefile:  Include
	templates for initialization files in distribution.

	* src/win/wgraph.c (drawgraph): Do not try to detect color capabilities
	of printers. When drawing to a printer, scale line widths to match the
	widths on screen and fix placement of super- and subscripts.
	Bug #3503318

2012-06-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readascii):  Bugfix for label plots using column 0